# ChangeLog for dev-java/jogl
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*jogl-2.1.4_rc1 (07 Jan 2014)

  07 Jan 2014; Johann Schmitz <ercpe@gentoo.org> +jogl-2.1.4_rc1.ebuild:
  Version bump of jogl

  03 Jan 2014; Justin Lecher <jlec@gentoo.org> -jogl-1.1.1.ebuild,
  +jogl-1.1.1a.ebuild:
  Bump away from vulnerable version, #330267

  03 Mar 2013; Justin Lecher <jlec@gentoo.org> jogl-2.0_rc8-r1.ebuild,
  metadata.xml:
  Keyworded for ~x86

*jogl-2.0_rc8-r1 (03 Feb 2013)

  03 Feb 2013; Guillaume Horel <guillaume.horel@gmail.com>
  +jogl-2.0_rc8-r1.ebuild:
  import jogl:2 from java-overlay

  29 May 2012; Sébastien Fabbro <bicatali@gentoo.org> jogl-1.1.1.ebuild:
  adapted gluegen dependency

  22 May 2012; Justin Lecher <jlec@gentoo.org> jogl-1.1.1.ebuild, metadata.xml:
  Add missing eutils.eclass, bump to EAPI=4, remove unnecessary bits

  18 May 2012; Christoph Junghans <ottxor@gentoo.org> jogl-1.1.1.ebuild:
  Fix repoman warning about position off EAPI

*jogl-1.1.1 (14 May 2012)

  14 May 2012; Sébastien Fabbro <bicatali@gentoo.org>
  +files/1.1.0/fix-solaris-compiler.patch, +files/1.1.0/uncouple-gluegen.patch,
  +jogl-1.1.1.ebuild, +metadata.xml:
  import from the java overlay