@@ -1,4 +1,4 @@
 DIST jogl-1.1.1a-src.zip 3656870 SHA256 84fa71520fb186ce7a7b2818210a1a3667fcdfb1545e673b3cbe51bac6ba9113 SHA512 6de4273594c3bb4f17a629647a78619ba00d5998fa35cb25ee220e402059647b2c8fd111f1abdada9a78998d1b73052f1b432ed95220d1966e73cb50295b66bf WHIRLPOOL 077abf5829851aa40e5240c59f2f8dbc93fa7e67241109c2e7d435b1043013864788db88a1216ac950e0e80e1393fb8804505fda26a0af1c8ce079ce2644fa45
-DIST jogl-2.1.4_rc1.tar.gz 31981577 SHA256 835986407c60f1dd9c95200496138270c00d461bb56edff6c3e91cb5343289f1 SHA512 9befb5b0f0ad1a1ef5060e72c960d03d063b91ec27cf283d3f7d16434bb573602389dcbc84d16aae177d74601d52e5a512e4599b1edf35480129b8435bbda971 WHIRLPOOL 3e3cc6a33321f957c1f2fa6a1090a49def5b884d6839822d9d0f4612ae53c188771b2ee5c7b787271e25708a91fe574882d10b20605382f15ec95a7723ff0dbb
+DIST jogl-2.1.4.tar.gz 32070918 SHA256 528c89643e532c6649f9243dd0cb0ee75800ab13e4f8d9a830163475dd1d5b0e SHA512 9d9f45676f671b1958352fcb7ddb4db539f19fb330db0146df6ce46167bcebf9c4fdc1a09bce72451a4bf2f4632a69cad2b4dd56df61c78f5e26e85a50918a0b WHIRLPOOL be0e9d4bc81b31a22050795b1b8e7f48c17e7c204c32ef0e47eca9175174f2f80a8ee3c0a024e744f692970b871dae0206ffd39e4f7db44a54a11720a54ed5a3
 DIST jogl-v2.0-rc8.tar.7z 18148821 SHA256 6d2338514b2e6c7ac61c59e0142d95d6b37434eefafecbbc2a8102f23f4f3e93 SHA512 ce335990dac4c868705f9cd041cab2e97050efcd9b6b0a8fa01e070aa7ee2f27162cb96ebbbd5e9f04a1aa9e7661dde6aa0ba1d02565f38fa76a39deeb48a500 WHIRLPOOL e38c1a7d6727f7dd8765d085ce2388afd7070c0625491038e84d26b8e14bb7fdaa5a89e75f742b5c30500cb02a198c5226d5ee743b1347acd31c6e555d281777
 DIST jogl-v2.1.2.tar.7z 21363248 SHA256 10f53b860e67ee02e6290d71e1d6c763df0ff372ea57d5464efd81f2a516a975 SHA512 8afd4328fbe941a95282a2d71be9dd0accb3cc027aa42226722cdc22924c289bf3ffcacec7f0ccf95080ae64093b79bab291b4e1c8fea1bd605435ce256ee1ee WHIRLPOOL 081126c44dfb1e4e1fa03913f100960c36e69e6b7f7fdbb65600ed96754bb5ff58670211afe26ad5b9760a30f18b96b5c7f6eef4f760307632b688cc693011c9
