@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*jogl-2.1.4 (12 Feb 2014)
+
+  12 Feb 2014; Guillaume Horel <guillaume.horel@gmail.com> +jogl-2.1.4.ebuild,
+  -jogl-2.1.4_rc1.ebuild:
+  dev-java/jogl: dev-java/jogl version bump
+
 *jogl-2.1.4_rc1 (07 Jan 2014)
 
   07 Jan 2014; Johann Schmitz <ercpe@gentoo.org> +jogl-2.1.4_rc1.ebuild:
